@@ -307,3 +307,4 @@ version 5.7.0
 -- Update French translations.
 -- Dont resolve loop device paths to their backing file if they are partitioned.
 -- Fix a bug that prevented restoring a LUKS2 volume header.
+-- Identify authenticated luks2 volumes as luks2+.
